# llm-knowledge-extractor

./: Dockerfile  README.md  dependencies.py  main.py  pyproject.toml
db/: database.py
db/migrations/: 001_InitialMigration.sql
models/: __init__.py
services/: analyzer.py
